...
//                   ),
//                   SizedBox(height: 50),
//                   Form(
//                     key: _formKey,
//                     child: BeautifulTextField(
//                       prefixIcon: Icons.search,
//                       labelText: "Codice treno",
//                       controller: inputController,
//                       keyboardType: TextInputType.number,
//                       validator: _errorType,
//                     ),
//                   ),
//                   SizedBox(height: 20),
//                   ActionButton(
//                     title: "Cerca",
//                     onPressed: !_isSearching
//                         ? () => searchButtonClick(inputController.text)
//                         : null,
//                   ),
//                   Recents(recents: recents),
//                 ],
...
